test/samples/invalid/interp/div_zero.maruir
fun main(): uint8
locals a: uint8, b: uint8;
{
    entry:
        a := uint8(5) / uint8(0);

        return a;
}